tests/cmp/dc-label-wrong-brackets.golden
Parse Error:
tests/cmp/dc-label-wrong-brackets.trp:1:25: parse error
  1 | let val x = 50 raisedTo <alice; bob>
    |                         ^
  unexpected '<'
  expected expression

